--- a/app/views/pages/adm.ejs
+++ b/app/views/pages/adm.ejs
@@ -18,6 +18,14 @@
             <p><a href="/sair">sair</a></p>
             <h1>Área do Administrador</h1>
 
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 
 </html>
