--- a/app/views/pages/avaliasaoadm.ejs
+++ b/app/views/pages/avaliasaoadm.ejs
@@ -159,5 +159,13 @@
     </footer>
 
     <script src="script/avaliacao.js"></script>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
