--- a/app/views/pages/blog.ejs
+++ b/app/views/pages/blog.ejs
@@ -192,5 +192,13 @@
         <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
     <script src="/js/busca-global.js"></script>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
