--- a/app/views/pages/blogadm.ejs
+++ b/app/views/pages/blogadm.ejs
@@ -399,5 +399,13 @@
             // Implementar filtro por categoria
         });
     </script>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
