--- a/app/views/pages/buscar.ejs
+++ b/app/views/pages/buscar.ejs
@@ -43,11 +43,11 @@
     <section class="oculto-desktop">
         <header>
             <nav class="grid">
-                <a href="/homecomprador">
+                <a href="javascript:void(0)" onclick="goBack()">
                     <img src="imagens/seta.png" class="seta-voltar" alt="Voltar">
                 </a>
                 <img src="imagens/logo.png" alt="Logo" class="logo">
-                <a href="/sacola1">
+                <a href="javascript:void(0)" onclick="goBack()">
                     <img src="imagens/carrinho.png" alt="Carrinho" class="logo">
                 </a>
             </nav>
@@ -148,6 +148,13 @@
         <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
 
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
     <script src="/js/busca-global.js"></script>
     <script src="/js/favoritos-global.js"></script>
 </body>
