--- a/app/views/pages/categorias.ejs
+++ b/app/views/pages/categorias.ejs
@@ -48,7 +48,7 @@
     <section class="oculto-desktop">
         <header>
             <nav class="grid">
-                <a href="/homecomprador">
+                <a href="javascript:void(0)" onclick="goBack()">
                     <img src="imagens/seta.png" class="seta-voltar" alt="Voltar">
                 </a>
                 <img src="imagens/logo.png" alt="Logo" class="logo">
@@ -57,7 +57,7 @@
                         <img src="<%= autenticado.imagem ? autenticado.imagem : 'imagens/icone sem cadastro.png' %>" alt="Perfil" style="width: 35px; height: 35px; border-radius: 50%; object-fit: cover;">
                     </a>
                 <% } else { %>
-                    <a href="/cadastro">
+                    <a href="javascript:void(0)" onclick="goBack()">
                         <img src="imagens/icone sem cadastro.png" alt="Perfil">
                     </a>
                 <% } %>
@@ -337,7 +337,11 @@
 
     <script>
         window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
     </script>
+    <script src="/js/navegacao.js"></script>
     <script src="/js/busca-global.js"></script>
     <script src="/js/favoritos-global.js"></script>
     <script src="/js/menu-auth.js"></script>
