--- a/app/views/pages/editarbanners.ejs
+++ b/app/views/pages/editarbanners.ejs
@@ -13,11 +13,11 @@
     <section class="oculto-desktop">
     <header>
       <nav class="grid">
-        <a href="/cadastro">
+        <a href="javascript:void(0)" onclick="goBack()">
           <img src="imagens/seta.png" alt="Seta Voltar">
         </a>
         <img src="imagens/logo.png" alt="Logo">
-        <a href="/carrinho">
+        <a href="javascript:void(0)" onclick="goBack()">
           <img src="imagens/carrinho.png" alt="Carrinho">
         </a>
       </nav>
@@ -148,5 +148,13 @@
         </section>
         <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
