--- a/app/views/pages/editargucci.ejs
+++ b/app/views/pages/editargucci.ejs
@@ -154,5 +154,13 @@
     </footer>
 
     <script src="js/editarpost.js"></script>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
