--- a/app/views/pages/enviopedido.ejs
+++ b/app/views/pages/enviopedido.ejs
@@ -44,7 +44,7 @@
     <section class="oculto-desktop">
     <header>
         <nav class="grid">
-            <a href="/homevendedor">
+            <a href="javascript:void(0)" onclick="goBack()">
               <img src="imagens/seta.png" alt="Seta Voltar">
             </a>
         </nav>
@@ -97,5 +97,13 @@
    <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
   </section>
   </footer>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
