--- a/app/views/pages/finalizandopagamento.ejs
+++ b/app/views/pages/finalizandopagamento.ejs
@@ -13,11 +13,11 @@
   <section class="oculto-desktop">
     <header>
       <nav class="grid">
-        <a href="/cadastro">
+        <a href="javascript:void(0)" onclick="goBack()">
           <img src="imagens/seta.png" alt="Seta Voltar">
         </a>
         <img src="imagens/logo.png" alt="Logo">
-        <a href="/cadastro">
+        <a href="javascript:void(0)" onclick="goBack()">
           <img src="imagens/foto-branca.png" alt="Carrinho">
         </a>
       </nav>
@@ -138,5 +138,13 @@
     </footer>
   </section>
     <script src="js/pagamento.js"></script>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
