--- a/app/views/pages/menu.ejs
+++ b/app/views/pages/menu.ejs
@@ -44,11 +44,11 @@
     <section class="oculto-desktop">
         <header>
             <nav class="grid">
-                <a href="/homecomprador">
+                <a href="javascript:void(0)" onclick="goBack()">
                     <img src="imagens/seta.png" alt="Voltar">
                 </a>
                 <img src="imagens/logo.png" alt="Vintélo">
-                <a href="/menu">
+                <a href="javascript:void(0)" onclick="goBack()">
                     <div class="profile-container">
                         <img src="<%= autenticado && autenticado.imagem ? autenticado.imagem : '/imagens/icone sem cadastro.png' %>" alt="Menu" class="profile-pic">
                     </div>
@@ -96,5 +96,13 @@
             </section>
         </section>
     </main>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
