--- a/app/views/pages/menuvendedor.ejs
+++ b/app/views/pages/menuvendedor.ejs
@@ -106,5 +106,13 @@
         </section>
         <p class="copyright">&copy; 2024 Vintélo. Todos os direitos reservados.</p>
     </footer>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
