--- a/app/views/pages/minhascomprasdesktop.ejs
+++ b/app/views/pages/minhascomprasdesktop.ejs
@@ -45,11 +45,11 @@
      <section class="oculto-desktop">
     <header>
         <nav class="grid">
-          <a href="/">
+          <a href="javascript:void(0)" onclick="goBack()">
             <img src="imagens/seta.png" alt="Seta Voltar">
           </a>
           <img src="imagens/logo.png" alt="Logo">
-          <a href="/cadastro">
+          <a href="javascript:void(0)" onclick="goBack()">
             <img src="imagens/icone sem cadastro.png" alt="Carrinho">
           </a>
         </nav>
@@ -228,5 +228,13 @@
   </footer>
 
     <script src="js/filtros.js"></script>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
