--- a/app/views/pages/perfilbrecho.ejs
+++ b/app/views/pages/perfilbrecho.ejs
@@ -44,7 +44,7 @@
     <section class="oculto-desktop">
         <header>
             <nav class="grid">
-                <a href="/homecomprador">
+                <a href="javascript:void(0)" class="seta-voltar">
                     <img src="/imagens/seta.png" class="seta-voltar">
                 </a>
                 <img src="/imagens/logo.png" alt="Logo">
@@ -53,7 +53,7 @@
                         <img src="<%= autenticado.imagem ? '/' + autenticado.imagem : '/imagens/icone sem cadastro.png' %>" alt="Perfil" style="width: 35px; height: 35px; border-radius: 50%; object-fit: cover;">
                     </a>
                 <% } else { %>
-                    <a href="/cadastro">
+                    <a href="javascript:void(0)" onclick="goBack()">
                         <img src="/imagens/icone sem cadastro.png" alt="Perfil">
                     </a>
                 <% } %>
@@ -214,7 +214,9 @@
 
     <script>
         window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        window.userType = '<%= typeof autenticado !== 'undefined' && autenticado && autenticado.tipo ? autenticado.tipo : 'c' %>';
     </script>
+    <script src="/js/navegacao.js"></script>
     <script src="/js/filtros.js"></script>
     <script src="/js/favoritos-global.js"></script>
     <script src="/js/seguir-brechos.js"></script>
