--- a/app/views/pages/perfilpremium.ejs
+++ b/app/views/pages/perfilpremium.ejs
@@ -89,11 +89,11 @@
     <section class="oculto-desktop">
         <header>
             <nav class="grid">
-                <a href="/homeadm">
+                <a href="javascript:void(0)" onclick="goBack()">
                     <img src="imagens/seta.png" class="seta-voltar" alt="Voltar">
                 </a>
                 <img src="imagens/logo.png" alt="Logo" class="logo">
-                <a href="/sacola1">
+                <a href="javascript:void(0)" onclick="goBack()">
                     <img src="imagens/carrinho.png" alt="Carrinho" class="logo">
                 </a>
             </nav>
@@ -266,5 +266,13 @@
     </footer>
 
     <script src="/js/perfilpremium.js"></script>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
