--- a/app/views/pages/perfilvender.ejs
+++ b/app/views/pages/perfilvender.ejs
@@ -44,11 +44,11 @@
     <section class="oculto-desktop">
     <header>
         <nav class="grid">
-          <a href="/homevendedor">
+          <a href="javascript:void(0)" onclick="goBack()">
            <img src="imagens/seta.png" alt="Seta Voltar">
           </a>
           <img src="imagens/logo.png" alt="Logo">
-          <a href="/planos">
+          <a href="javascript:void(0)" onclick="goBack()">
            <img src="imagens/icone premium.png" alt="Premium">
           </a>
         </nav>
