--- a/app/views/pages/produto.ejs
+++ b/app/views/pages/produto.ejs
@@ -43,7 +43,7 @@
     <section class="oculto-desktop">
         <header>
             <nav class="grid">
-                <a href="/homecomprador">
+                <a href="javascript:void(0)" onclick="goBack()">
                     <img src="/imagens/seta.png">
                 </a>
                 <img src="/imagens/logo.png">
@@ -193,10 +193,14 @@
     <script>
         // Variáveis globais para o JavaScript
         window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
         <% if (produto) { %>
         window.produtoId = '<%= produto.ID_PRODUTO %>';
         <% } %>
     </script>
+    <script src="/js/navegacao.js"></script>
     <script src="/js/produto.js"></script>
     <script src="/js/busca-global.js"></script>
 </body>
