--- a/app/views/pages/produto1.ejs
+++ b/app/views/pages/produto1.ejs
@@ -43,7 +43,7 @@
     <section class="oculto-desktop">
     <header>
       <nav class="grid">
-        <a href="/">
+        <a href="javascript:void(0)" onclick="goBack()">
          <img src="imagens/seta.png">
         </a>
         <img src="imagens/logo.png">
