--- a/app/views/pages/produto4.ejs
+++ b/app/views/pages/produto4.ejs
@@ -43,7 +43,7 @@
     <section class="oculto-desktop">
     <header>
       <nav class="grid">
-        <a href="/">
+        <a href="javascript:void(0)" onclick="goBack()">
          <img src="imagens/seta.png">
         </a>
         <img src="imagens/logo.png">
@@ -267,5 +267,13 @@
          <p class="copyright">©2024 Vintélo. Todos os direitos reservados.</p>
       </footer>
        </section>
+
+    <script>
+        window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
+    </script>
+    <script src="/js/navegacao.js"></script>
 </body>
 </html>
