--- a/app/views/pages/sacola1.ejs
+++ b/app/views/pages/sacola1.ejs
@@ -47,7 +47,7 @@
     <section class="oculto-desktop">
         <header>
             <nav class="grid">
-                <a href="/">
+                <a href="javascript:void(0)" onclick="goBack()">
                     <img src="imagens/seta.png" alt="Seta Voltar">
                 </a>
                 <img src="imagens/logo.png" alt="Logo">
@@ -56,7 +56,7 @@
                         <img src="<%= autenticado.imagem ? autenticado.imagem : 'imagens/icone sem cadastro.png' %>" alt="Perfil" style="width: 35px; height: 35px; border-radius: 50%; object-fit: cover;">
                     </a>
                 <% } else { %>
-                    <a href="/cadastro">
+                    <a href="javascript:void(0)" onclick="goBack()">
                         <img src="imagens/icone sem cadastro.png" alt="Perfil">
                     </a>
                 <% } %>
@@ -192,7 +192,11 @@
 
     <script>
         window.isAuthenticated = <%= typeof autenticado !== 'undefined' && autenticado && autenticado.autenticado ? 'true' : 'false' %>;
+        <% if (typeof autenticado !== 'undefined' && autenticado && autenticado.tipo) { %>
+        window.userType = '<%= autenticado.tipo %>';
+        <% } %>
     </script>
+    <script src="/js/navegacao.js"></script>
     <script src="/js/carrinho-global.js"></script>
     <script src="/js/busca-global.js"></script>
 </body>
